# Unarian

./: .gitignore  README.md  meson.build
examples/: coin_sums.un  collatz.un  digit_sum.un  fact.un  fibonacci.un  power_of_2.un
inc/: bigint.hpp  bytecode.hpp  counter.hpp  interpreter.hpp  optimizer.hpp  parser.hpp  position.hpp  program.hpp  token.hpp
src/: bytecode.cpp  counter.cpp  interpreter.cpp  main.cpp  optimizer.cpp  parser.cpp  program.cpp  token.cpp
tests/: add.un  add_sub.un  branches.un  decrement.un  div.un  div_if.un  double.un  factorial.un  fibonacci.un  increment.un  meson.build  million.un  mod.un  mult.un  nested.un  not.un  sub.un  test_unarian.py  zero.un
